change file env.example

--- a/.env.example
+++ b/.env.example
@@ -26,8 +26,8 @@ REDIS_PORT=6379
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
-MAIL_USERNAME=tham27011@gmail.com
-MAIL_PASSWORD=thong2508
+MAIL_USERNAME=null
+MAIL_PASSWORD=null
 MAIL_ENCRYPTION=tls
 MAIL_FROM_NAME=Trust
 
